<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <!--main layout-->
    <LinearLayout
        android:id="@+id/llMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/toolbar_black" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:orientation="vertical"
            android:padding="@dimen/app_standard_space">

            <ImageView
                android:id="@+id/ivTemp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:adjustViewBounds="true"
                android:contentDescription="@string/weather_image"
                android:scaleType="fitCenter" />


            <TextView
                android:id="@+id/tvTempDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="24dp"
                android:textColor="@color/darkGrey"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tvTempVal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/tvTempDescription"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="8dp"
                android:textColor="@color/darkGrey"
                android:textSize="50sp" />

            <TextView
                android:id="@+id/tvWeatherCountryCity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/tvTempVal"
                android:textColor="@color/darkGrey"
                android:textSize="16sp" />

            <include layout="@layout/radio_group_temp"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                />

        </RelativeLayout>

    </LinearLayout>

    <!--weather info-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/app_standard_space">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/app_standard_space"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/wind"
                android:textColor="@color/grey"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvWindValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textColor="@color/darkGrey"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/app_standard_space"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/humidity"
                android:textColor="@color/grey"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvHumidityValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textColor="@color/darkGrey"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/pressure"
                android:textColor="@color/grey"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvPressureValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:textColor="@color/darkGrey"
                android:textSize="16sp" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>